superset/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-superset-svc
  labels:
    app: superset-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8088
  selector:
    app: superset
